objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Parent_Ownership_Structure__c</fullName>
        <label>Parent Ownership Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Family Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participated_in_Dealer_Website_in_Past__c</fullName>
        <label>Participated in Dealer Website in Past?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participating_Location__c</fullName>
        <label>Participating Location?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Pipeline_Status__c</fullName>
        <label>Partner Pipeline Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Fact Finding Completed</fullName>
                </value>
                <value>
                    <fullName>Logistics Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Logistics Meeting Held</fullName>
                </value>
                <value>
                    <fullName>Contract Sent</fullName>
                </value>
                <value>
                    <fullName>Sent to Margie</fullName>
                </value>
                <value>
                    <fullName>Scheduled Reseller logistics meeting</fullName>
                </value>
                <value>
                    <fullName>Completed Reseller logistics meeting</fullName>
                </value>
                <value>
                    <fullName>Completed product demonstration</fullName>
                </value>
                <value>
                    <fullName>Not compatible for partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_type_of_partner__c</fullName>
        <label>Potential type of partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$200</fullName>
                </value>
                <value>
                    <fullName>$300</fullName>
                </value>
                <value>
                    <fullName>Rev Share</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Existing_Advertising__c</fullName>
        <label>Prior/Existing Advertising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Einstein Medical</fullName>
                </value>
                <value>
                    <fullName>Idearc Media Corp (Superpages.com)</fullName>
                </value>
                <value>
                    <fullName>Leads.com/Web.com</fullName>
                </value>
                <value>
                    <fullName>LocalLaunch</fullName>
                </value>
                <value>
                    <fullName>LocalLaunch (R.H. Donnelley)</fullName>
                </value>
                <value>
                    <fullName>Local Marketers</fullName>
                </value>
                <value>
                    <fullName>Marchex</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Officite, LLC</fullName>
                </value>
                <value>
                    <fullName>Orange Soda</fullName>
                </value>
                <value>
                    <fullName>Print Yellow Pages</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>ReachLocal</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>SEO Agency</fullName>
                </value>
                <value>
                    <fullName>ServiceMagic</fullName>
                </value>
                <value>
                    <fullName>SpotRunner</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>WebVisible</fullName>
                </value>
                <value>
                    <fullName>YellowBook</fullName>
                </value>
                <value>
                    <fullName>YELLOWPAGES.COM</fullName>
                </value>
                <value>
                    <fullName>Yes Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yodle Essentials</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Dental</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Chiro</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Auto</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Field Service</fullName>
                </value>
                <value>
                    <fullName>Yodle Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Type__c</fullName>
        <label>Prospect Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National-Corporate Spend</fullName>
                </value>
                <value>
                    <fullName>National-Preferred Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_Partner__c</fullName>
        <label>Quality of Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Better</fullName>
                </value>
                <value>
                    <fullName>Best</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radio_2009__c</fullName>
        <label>Radio 2009</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABC ESPN</fullName>
                </value>
                <value>
                    <fullName>DG Streaming</fullName>
                </value>
                <value>
                    <fullName>DG TRN Mancow</fullName>
                </value>
                <value>
                    <fullName>FM Weekday AM</fullName>
                </value>
                <value>
                    <fullName>KCBS SF</fullName>
                </value>
                <value>
                    <fullName>KJAQ SEA</fullName>
                </value>
                <value>
                    <fullName>KRFC SF</fullName>
                </value>
                <value>
                    <fullName>KVI SEA</fullName>
                </value>
                <value>
                    <fullName>Main Sales Line</fullName>
                </value>
                <value>
                    <fullName>Premiere Hannity Encore</fullName>
                </value>
                <value>
                    <fullName>Sirius/XM ESPN Radio</fullName>
                </value>
                <value>
                    <fullName>Sirius/XM Fox News</fullName>
                </value>
                <value>
                    <fullName>Sirius/XM Howard Stern 100</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>WBZ BOS</fullName>
                </value>
                <value>
                    <fullName>WTKK BOS</fullName>
                </value>
                <value>
                    <fullName>WW1  FM Morning Network</fullName>
                </value>
                <value>
                    <fullName>WW1 FM Weekday MD</fullName>
                </value>
                <value>
                    <fullName>WW1 News Day</fullName>
                </value>
                <value>
                    <fullName>WW1 News Network MD</fullName>
                </value>
                <value>
                    <fullName>WW1 Osgood File</fullName>
                </value>
                <value>
                    <fullName>WW1 Thom Hartmann</fullName>
                </value>
                <value>
                    <fullName>WW News Net O'nights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radio_2010__c</fullName>
        <label>Radio 2010</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Citadel Mark Levin</fullName>
                </value>
                <value>
                    <fullName>Citadel Tom Kent Weeknight</fullName>
                </value>
                <value>
                    <fullName>Dial Global Thom Hartmann</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Premiere Glenn Beck Weekend</fullName>
                </value>
                <value>
                    <fullName>Premiere Hannity Encore</fullName>
                </value>
                <value>
                    <fullName>Sirius/XM Fox News</fullName>
                </value>
                <value>
                    <fullName>Sirius/XM Fox News Talk</fullName>
                </value>
                <value>
                    <fullName>Sirius/XM The Virus</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>WW1 BRN MD</fullName>
                </value>
                <value>
                    <fullName>WW1 Early Morning Weekend News</fullName>
                </value>
                <value>
                    <fullName>WW1 FM Weekday EVE</fullName>
                </value>
                <value>
                    <fullName>WW1 FM Weekday MD</fullName>
                </value>
                <value>
                    <fullName>WW1 FM Weekday PM</fullName>
                </value>
                <value>
                    <fullName>WW1 News Network Overnight M-F</fullName>
                </value>
                <value>
                    <fullName>WW1 News Network Overnight Sa-Su</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Lead_Rating__c</fullName>
        <label>Rep Lead Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>What is Your Role in the Company?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seasonality__c</fullName>
        <label>Seasonality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <label>Secondary Lead Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Site</fullName>
                </value>
                <value>
                    <fullName>Cold Call - Citysearch</fullName>
                </value>
                <value>
                    <fullName>Cold Call - Clicksmart</fullName>
                </value>
                <value>
                    <fullName>Cold Call - Directory</fullName>
                </value>
                <value>
                    <fullName>Cold Call - other</fullName>
                </value>
                <value>
                    <fullName>Cold Call - SEM</fullName>
                </value>
                <value>
                    <fullName>Cold Call - SEO</fullName>
                </value>
                <value>
                    <fullName>Cold Call - ServiceMagic</fullName>
                </value>
                <value>
                    <fullName>Cold Call - YP</fullName>
                </value>
                <value>
                    <fullName>Customer referral</fullName>
                </value>
                <value>
                    <fullName>directmail.adwords1</fullName>
                </value>
                <value>
                    <fullName>directmail.amx1</fullName>
                </value>
                <value>
                    <fullName>directmail.broad1</fullName>
                </value>
                <value>
                    <fullName>directmail.contractor1</fullName>
                </value>
                <value>
                    <fullName>directmail.dentalecon</fullName>
                </value>
                <value>
                    <fullName>directmail.gnydm08</fullName>
                </value>
                <value>
                    <fullName>directmail.lctmag</fullName>
                </value>
                <value>
                    <fullName>directmail.plasticsurg</fullName>
                </value>
                <value>
                    <fullName>directmail.smagic1</fullName>
                </value>
                <value>
                    <fullName>directmail.smagic2</fullName>
                </value>
                <value>
                    <fullName>directmail.smagic3</fullName>
                </value>
                <value>
                    <fullName>directmail.smagic4</fullName>
                </value>
                <value>
                    <fullName>Direct Mail - American Spa1</fullName>
                </value>
                <value>
                    <fullName>DirectoryM</fullName>
                </value>
                <value>
                    <fullName>Display Ad</fullName>
                </value>
                <value>
                    <fullName>Dun and Bradstreet</fullName>
                </value>
                <value>
                    <fullName>email.cleanfaxconnections</fullName>
                </value>
                <value>
                    <fullName>email.directormdentist</fullName>
                </value>
                <value>
                    <fullName>email.directorymcontractor</fullName>
                </value>
                <value>
                    <fullName>email.directorymlimo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sole_DM_for_advertising_purchases__c</fullName>
        <label>Sole DM for advertising purchases?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_JCI_Dealer_Domain__c</fullName>
        <label>Use Existing JCI Dealer Domain?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_from_Online__c</fullName>
        <label>Are You Getting Value From Online?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Business and Professional Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Health and Medicine</fullName>
                </value>
                <value>
                    <fullName>Home and Garden</fullName>
                </value>
                <value>
                    <fullName>Legal and Financial Services</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Travel and Lifestyle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinar__c</fullName>
        <label>Webinar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered - 5.27</fullName>
                </value>
                <value>
                    <fullName>Attended - 5.27</fullName>
                </value>
                <value>
                    <fullName>Did not Attend - 5.27</fullName>
                </value>
                <value>
                    <fullName>Archived - 5.27</fullName>
                </value>
                <value>
                    <fullName>Registered - Dental - 10/14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Do You Have a Website?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_the_Portal_Submitted_By__c</fullName>
        <label>Who is the Portal Submitted By?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Distributor TM</fullName>
                </value>
                <value>
                    <fullName>JCI Branch</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2009_Trade_Show__c</fullName>
        <label>Trade Show</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>(Mid Atlantic) NPMA</fullName>
                </value>
                <value>
                    <fullName>AACD Table Top</fullName>
                </value>
                <value>
                    <fullName>AACS (Orlando)</fullName>
                </value>
                <value>
                    <fullName>AACS AZ</fullName>
                </value>
                <value>
                    <fullName>AAD</fullName>
                </value>
                <value>
                    <fullName>AAD (Summer)</fullName>
                </value>
                <value>
                    <fullName>AADGP</fullName>
                </value>
                <value>
                    <fullName>AAFPRS</fullName>
                </value>
                <value>
                    <fullName>AAID</fullName>
                </value>
                <value>
                    <fullName>AAJ (Spring)</fullName>
                </value>
                <value>
                    <fullName>AAO</fullName>
                </value>
                <value>
                    <fullName>AAO - Opthamology</fullName>
                </value>
                <value>
                    <fullName>AAP</fullName>
                </value>
                <value>
                    <fullName>ABA Tech</fullName>
                </value>
                <value>
                    <fullName>ABI</fullName>
                </value>
                <value>
                    <fullName>ABI (Atlanta)</fullName>
                </value>
                <value>
                    <fullName>Academy of Laser Dentistry</fullName>
                </value>
                <value>
                    <fullName>Acad of Laser Dentistry</fullName>
                </value>
                <value>
                    <fullName>ACE (FL)</fullName>
                </value>
                <value>
                    <fullName>ADA</fullName>
                </value>
                <value>
                    <fullName>ADA (HAWAII)</fullName>
                </value>
                <value>
                    <fullName>Advances in Rhinoplasty</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Concepts</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Facial Recon</fullName>
                </value>
                <value>
                    <fullName>Aesthetics Conference</fullName>
                </value>
                <value>
                    <fullName>AGD</fullName>
                </value>
                <value>
                    <fullName>AILA</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Air-Serv Conference</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Party_Website__c</fullName>
        <label>3rd Party Website?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yodle_Submit_Type__c</fullName>
        <label>YLL Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webinar_email_subject__c</fullName>
        <label>webinar email subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone not ringing enough? You’re invited.</fullName>
                </value>
                <value>
                    <fullName>How to succeed in the recession - You’re invited.</fullName>
                </value>
                <value>
                    <fullName>On 5/27, get your phone ringing again</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Segments__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Vertical__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Apartment Rentals</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Arborist</fullName>
                </value>
                <value>
                    <fullName>Architects &amp; Engineers</fullName>
                </value>
                <value>
                    <fullName>Auctioneers</fullName>
                </value>
                <value>
                    <fullName>Auto Body Shop</fullName>
                </value>
                <value>
                    <fullName>Auto Dealer</fullName>
                </value>
                <value>
                    <fullName>Auto Glass</fullName>
                </value>
                <value>
                    <fullName>Auto Painting</fullName>
                </value>
                <value>
                    <fullName>Auto repair</fullName>
                </value>
                <value>
                    <fullName>Bail Bonds</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Banquet Rooms</fullName>
                </value>
                <value>
                    <fullName>Beauty and Salon Training</fullName>
                </value>
                <value>
                    <fullName>Blinds</fullName>
                </value>
                <value>
                    <fullName>Boat Charters</fullName>
                </value>
                <value>
                    <fullName>Bridal</fullName>
                </value>
                <value>
                    <fullName>Car Parts</fullName>
                </value>
                <value>
                    <fullName>Carpenter</fullName>
                </value>
                <value>
                    <fullName>Carpet - Install &amp; Cleaning</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Ceilings</fullName>
                </value>
                <value>
                    <fullName>Child Care</fullName>
                </value>
                <value>
                    <fullName>Chimney</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Cleaning Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__LT_Info__c</fullName>
        <description>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</description>
        <inlineHelpText>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</inlineHelpText>
        <label>LT Info</label>
        <length>340</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_SFDC__c</fullName>
        <description>Salesforce IANA timezone.</description>
        <inlineHelpText>Salesforce IANA timezone.</inlineHelpText>
        <label>Timezone SFDC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CPP_LH_360_PMS_Leads</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Quality_of_Partner__c</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Suffix__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.CPP</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Inbound</value>
        </filters>
        <filters>
            <field>Business_type__c</field>
            <operation>equals</operation>
            <value>PMS</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Not Interested,Bad Info,Not Qualified,Bad Data</value>
        </filters>
        <label>CPP - LH 360 PMS Leads</label>
    </listViews>
    <listViews>
        <fullName>CPP_LH_360_PMS_Leads1</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Total_of_Activities__c</columns>
        <columns>Quality_of_Partner__c</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>Suffix__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.CPP</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Inbound</value>
        </filters>
        <filters>
            <field>Business_type__c</field>
            <operation>equals</operation>
            <value>PMS</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Not Interested,Not Qualified</value>
        </filters>
        <label>CPP - ACTIVE LH 360 PMS Leads</label>
    </listViews>
</CustomObject>